# open-data-visualization

./: .gitignore  AHK_READY.md  Cargo.toml  DATA_COMPARISON_REPORT.md  PARSING_SUMMARY.md  README.md  REMINDER_UPDATE_SUMMARY_STATS.md  SEC.md  SEC_AHK_OPTIMIZATION_SUMMARY.md  SUMMARY_STATS_UPDATE.md  altgovph.env  altgovph_routes.rs  analyze_complementary_data.py  budget_client.py  budget_postgres_client.py  check_aligned_coords.py  check_angeles_alignment.py  check_duplicate_coords.py  check_meilisearch.py  check_north_luzon_alignment.py  check_pampanga_alignment.py  clean_contractor_names.py  contractors_next25.txt  create_dime_views.sql  dime_client.py  find_empty_sec_results.py  find_more_skewers.py  flood_client.py  generate_summary_stats.py  get_top_100_no_sec.py  get_top_200_no_sec.py  nep_client.py  nep_postgres_client.py  package.json  philgeps_meilisearch_matcher.py  requirements.txt  sec_complete_automation.py  sec_contractor_parser.py  sec_search_windows.py  sync_dime_contractors.py  (+6 more)
analysis/: GAA_VALIDATION_REPORT.md  NEP_2026_ANALYSIS_SUMMARY.md  NEP_DATABASE_SETUP.md  PHILGEPS_MEILISEARCH_CONNECTION.md  README.md  SETUP_COMPLETE.md  analyze_nep_2026_vs_flood_baseline.py  analyze_philgeps_complementary_fields.py  analyze_proximity_patterns.py  check_meilisearch_vs_csv.py  compare_2025_data.py  compare_gaa_multi_year.py  compare_nep_gaa.py  create_gaa_views.py  find_amount_differences.py  flood_same_amount_proximity_analysis.py  load_all_missing_years.py  load_nep_2025.py  nep_2026_pattern_analysis.py  nep_2026_sudden_rise_analysis.py  reload_gaa_from_json.py  (+4 more)
(+519 files in other folders)
