[package]
name = "open-data-visualization"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
actix-cors = "0.6"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
